[gd_scene load_steps=32 format=2]

[ext_resource path="res://audio/406949__kyles__village-small-crowd-morning-under-mango-trees-children-kids-and-nearby-and-distant-mellow-voices-and-activity-putti-uganda-africa-2016.mp3" type="AudioStream" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://RockOrigin.gd" type="Script" id=3]
[ext_resource path="res://assets/PlayerIdle-Sheet.png" type="Texture" id=4]
[ext_resource path="res://runtime_data.tres" type="Resource" id=6]
[ext_resource path="res://assets/PlayerRun-Sheet.png" type="Texture" id=7]
[ext_resource path="res://assets/PlayerStealth-Sheet.png" type="Texture" id=8]
[ext_resource path="res://audio/music/Byzantin ending.wav" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "stealth_walk",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=20]
radius = 2.52593
height = 11.2413

[sub_resource type="OccluderPolygon2D" id=21]
polygon = PoolVector2Array( -4.94555, 0.300838, 2.61398, -2.14026, 1.75424, 8.79547, -2.17438, 8.51486 )

[sub_resource type="Animation" id=22]
resource_name = "credits_song"
length = 111.0
tracks/0/type = "audio"
tracks/0/path = NodePath("Ambiance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 107.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "emit_song_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=23]
length = 240.0
loop = true
tracks/0/type = "audio"
tracks/0/path = NodePath("Ambiance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 1 )
} ],
"times": PoolRealArray( 0.2 )
}

[node name="Player" type="KinematicBody2D"]
self_modulate = Color( 1, 1, 1, 0 )
collision_layer = 2
script = ExtResource( 2 )
_runtime_data = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.374577, 0 )
frames = SubResource( 19 )
animation = "stealth_walk"
frame = 3
playing = true

[node name="RockOrigin" type="Position2D" parent="AnimatedSprite"]
position = Vector2( 1.37458, 0 )
script = ExtResource( 3 )

[node name="RockCooldown" type="Timer" parent="AnimatedSprite/RockOrigin"]
one_shot = true

[node name="CameraTarget" type="Node2D" parent="AnimatedSprite"]
position = Vector2( 50.3746, 0 )

[node name="Camera2D" type="Camera2D" parent="AnimatedSprite/CameraTarget"]
current = true
zoom = Vector2( 0.25, 0.25 )
smoothing_enabled = true
offset_v = -0.4

[node name="Tween" type="Tween" parent="AnimatedSprite/CameraTarget/Camera2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 20 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 5 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 21 )

[node name="Ambiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -13.955
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 199.81
anims/credits_song = SubResource( 22 )
anims/village_ambiant_day = SubResource( 23 )

[connection signal="canInteract" from="." to="." method="_on_Player_canInteract"]
[connection signal="resetInteract" from="." to="." method="_on_Player_resetInteract"]
